hermes/tests/fixtures/broken_doc_block/expected.stderr

=== Anneal Verification Failed ===

[Anneal Error] anneal::doc_block

  × Documentation block error: Unclosed Anneal block in documentation.
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:1]
 1 │ /// ```lean, anneal
   · ─────────┬─────────
   ·          ╰── problematic block
 2 │ /// context:
   ╰────

Error: Aborting due to 1 previous errors.
